Koha/Plugin/Com/PerplexedTheta/SENUX/static_files/src/css/senux/senux-nav.scss
@charset "UTF-8";
//
// Part of the Senux Project
// Copyright 2021-2022 Jake Deery
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

//
//
// navbar

//
// logo
#logo {
    display: $navbarLogoDisplayMobile;
    width: $navbarLogoWidth;
    height: auto;
    margin: 0 1rem 0 0;

    color: $navbarLogoText;
    background: $navbarLogoBg;
    background-size: $navbarLogoBgSize;

    &:hover {
        color: $navbarLinkTextHov;
        background: $navbarLogoBgHov;
        background-size: $navbarLogoBgSize;
    }

    &:focus {
        color: $navbarLinkTextFoc;
        background: $navbarLogoBgHov;
        background-size: $navbarLogoBgSize;
    }

    a {
        color: $navbarLinkText;
        background-color: $navbarLinkBg;
        border: $navbarLinkBorderSettings;
        outline: $navbarLinkOutlineSettings;
        box-shadow: $navbarLinkBoxShadowSettings;
        text-decoration: $navbarLinkDecorationSettings;

        i.fa,
        i.fa-solid {
            color: $navbarLinkText
        }

        &:hover {
            color: $navbarLinkTextHov;
            background-color: $navbarLinkBgHov;
            border: $navbarLinkBorderSettingsHov;
            outline: $navbarLinkOutlineSettingsHov;
            box-shadow: $navbarLinkBoxShadowSettingsHov;
            text-decoration: $navbarLinkDecorationSettingsHov;
            text-decoration-thickness: .1875rem;

            i.fa,
            i.fa-solid {
                color: $navbarLinkTextHov
            }
        }

        &:focus {
            color: $navbarLinkTextHov !important;
            background-color: $navbarLinkBgHov !important;
            border: $navbarLinkBorderSettingsFoc !important;
            outline: $navbarLinkOutlineSettingsFoc !important;
            box-shadow: $navbarLinkBoxShadowSettingsFoc !important;
            text-decoration: $navbarLinkDecorationSettingsFoc !important;

            i.fa,
            i.fa-solid {
                color: $navbarLinkTextHov !important
            }

            &:not(:active):not(:hover) {
                color: $navbarLinkTextFoc !important;
                background-color: $navbarLinkBgFoc !important;
                border: $navbarLinkBorderSettingsFoc !important;
                outline: $navbarLinkOutlineSettingsFoc !important;
                box-shadow: $navbarLinkBoxShadowSettingsFoc !important;
                text-decoration: $navbarLinkDecorationSettingsFoc !important;

                i.fa,
                i.fa-solid {
                    color: $navbarLinkTextFoc !important
                }
            }
        }

        &:active,
        &.active {
            color: $navbarLinkTextHov;
            background-color: $navbarLinkBgHov;
            border: $navbarLinkBorderSettingsHov;

            i.fa,
            i.fa-solid {
                color: $navbarLinkTextHov;
            }
        }

        &:disabled,
        &.disabled {
            color: $navbarLinkText;
            background-color: $navbarLinkBg;
            border: $navbarLinkBorderSettings;
            outline: $navbarLinkOutlineSettings;
            box-shadow: $navbarLinkBoxShadowSettings;

            i.fa,
            i.fa-solid {
                color: $navbarLinkText;
            }
        }
    }
}

@media(min-width: $breakpoint-pc) {
    #logo {
        display: $navbarLogoDisplay
    }
}

img[src="/opac-tmpl/bootstrap/images/koha-green-logo.png?raw=1"] {
    display: none
}

//
// navbar
#header-region {
    background-color: $navbarBg;
    border-radius: 0;
}

.navbar-expand {
    background-color: $transparent;
    padding: .5rem 1rem;
    border: none;
}

#cartDetails {
    top: calc(57px + 1rem);
    right: auto;
    bottom: auto;
    left: 1rem;
    border: $defaultBorderSettings;
    outline: $defaultOutlineSettings;
}

#cart-list-nav,
#members,
#header_langmenu {
    li {
        a {
            color: $navbarLinkText;
            background-color: $navbarLinkBg;
            border: $navbarLinkBorderSettings;
            outline: $navbarLinkOutlineSettings;
            box-shadow: $navbarLinkBoxShadowSettings;
            text-decoration: $navbarLinkDecorationSettings;

            i.fa,
            i.fa-solid {
                color: $navbarLinkText
            }

            &:hover {
                color: $navbarLinkTextHov;
                background-color: $navbarLinkBgHov;
                border: $navbarLinkBorderSettingsHov;
                outline: $navbarLinkOutlineSettingsHov;
                box-shadow: $navbarLinkBoxShadowSettingsHov;
                text-decoration: $navbarLinkDecorationSettingsHov;
                text-decoration-thickness: .1875rem;

                i.fa,
                i.fa-solid {
                    color: $navbarLinkTextHov
                }
            }

            &:focus {
                color: $navbarLinkTextHov !important;
                background-color: $navbarLinkBgHov !important;
                border: $navbarLinkBorderSettingsFoc !important;
                outline: $navbarLinkOutlineSettingsFoc !important;
                box-shadow: $navbarLinkBoxShadowSettingsFoc !important;
                text-decoration: $navbarLinkDecorationSettingsFoc !important;

                i.fa,
                i.fa-solid {
                    color: $navbarLinkTextHov !important
                }

                &:not(:active):not(:hover) {
                    color: $navbarLinkTextFoc !important;
                    background-color: $navbarLinkBgFoc !important;
                    border: $navbarLinkBorderSettingsFoc !important;
                    outline: $navbarLinkOutlineSettingsFoc !important;
                    box-shadow: $navbarLinkBoxShadowSettingsFoc !important;
                    text-decoration: $navbarLinkDecorationSettingsFoc !important;

                    i.fa,
                    i.fa-solid {
                        color: $navbarLinkTextFoc !important
                    }
                }
            }

            &:active,
            &.active {
                color: $navbarLinkTextHov;
                background-color: $navbarLinkBgHov;
                border: $navbarLinkBorderSettingsHov;

                i.fa,
                i.fa-solid {
                    color: $navbarLinkTextHov;
                }
            }

            &:disabled,
            &.disabled {
                color: $navbarLinkText;
                background-color: $navbarLinkBg;
                border: $navbarLinkBorderSettings;
                outline: $navbarLinkOutlineSettings;
                box-shadow: $navbarLinkBoxShadowSettings;

                i.fa,
                i.fa-solid {
                    color: $navbarLinkText;
                }
            }
        }

        a.dropdown-item {
            background-color: $dropdownLinkBg;
            color: $dropdownLinkText;
            text-decoration: $dropdownLinkDecorationSettings;

            i.fa,
            i.fa-solid {
                color: $dropdownLinkText;
            }

            &:hover {
                background-color: $dropdownLinkBgHov;
                color: $dropdownLinkTextHov;
                text-decoration: $dropdownLinkDecorationSettingsHov;

                i.fa,
                i.fa-solid {
                    color: $dropdownLinkTextHov;
                }
            }
        }

        &::before {
            content: none
        }
    }

    .divider-vertical,
    .clearsh {
        display: none
    }
}

#user-menu {
    display: block;
    padding: .5rem
}

#loggedinuser-menu {
    background-color: $navbarUsermenuBg;

    p {
        a.login-link {
            color: $navbarUsermenuLinkText;

            &:hover {
                color: $navbarUsermenuLinkTextHov
            }

            &:focus {
                color: $navbarUsermenuLinkTextHov !important;

                &:not(:active):not(:hover) {
                    color: $navbarUsermenuLinkTextHov !important
                }
            }
        }
    }

    a#logout.logout {
        color: $navbarUsermenuLogoutText;

        &:hover {
            color: $navbarUsermenuLogoutTextHov
        }

        &:focus {
            color: $navbarUsermenuLogoutTextHov !important;

            &:not(:active):not(:hover) {
                color: $navbarUsermenuLogoutTextHov !important
            }
        }
    }
}

.dropdown-menu {
    background-color: $dropdownBg;
    color: $dropdownText
}

.navbar .nav>li {
    &::before {
        content: none
    }
}

//
//
// mobile overrides
.custlabel1,
.custlabel2,
.custlabel3,
.custlabel4,
.custlabel5 {
    display: none
}

@media only screen and (min-width: $breakpoint-pc) {

    .custlabel1,
    .custlabel2,
    .custlabel3,
    .custlabel4,
    .custlabel5 {
        display: inline
    }
}

